attempt, feb 15, at a complete lost with lookahed, filtering, and allocaiton matching